// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser - Alias should parse alias 1`] = `
{
  "body": [
    {
      "isNominal": false,
      "kind": "AliasDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 11,
                "line": 1,
              },
              "start": {
                "column": 7,
                "line": 1,
              },
            },
            "value": "User",
          },
        },
        "isNominal": false,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 11,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "value": "User",
        },
      },
      "type": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 22,
                "line": 1,
              },
              "start": {
                "column": 14,
                "line": 1,
              },
            },
            "value": "Response",
          },
        },
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 22,
              "line": 1,
            },
            "start": {
              "column": 14,
              "line": 1,
            },
          },
          "value": "Response",
        },
      },
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Alias should parse alias for function signature 1`] = `
{
  "body": [
    {
      "isNominal": false,
      "kind": "AliasDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 15,
                "line": 1,
              },
              "start": {
                "column": 7,
                "line": 1,
              },
            },
            "value": "Callback",
          },
        },
        "isNominal": false,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 15,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "value": "Callback",
        },
      },
      "type": {
        "body": undefined,
        "isNominal": false,
        "kind": "FunctionType",
        "name": undefined,
        "parameters": [
          {
            "kind": "FunctionParam",
            "name": {
              "position": {
                "end": {
                  "column": 23,
                  "line": 1,
                },
                "start": {
                  "column": 22,
                  "line": 1,
                },
              },
              "value": "x",
            },
            "type": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 31,
                    "line": 1,
                  },
                  "start": {
                    "column": 25,
                    "line": 1,
                  },
                },
                "value": "number",
              },
            },
          },
        ],
        "returnType": {
          "isNominal": false,
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 42,
                "line": 1,
              },
              "start": {
                "column": 36,
                "line": 1,
              },
            },
            "value": "number",
          },
        },
        "typeParameters": undefined,
      },
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Alias should parse alias for function signature with name 1`] = `
{
  "body": [
    {
      "isNominal": false,
      "kind": "AliasDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 15,
                "line": 1,
              },
              "start": {
                "column": 7,
                "line": 1,
              },
            },
            "value": "Callback",
          },
        },
        "isNominal": false,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 15,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "value": "Callback",
        },
      },
      "type": {
        "body": undefined,
        "isNominal": false,
        "kind": "FunctionType",
        "name": {
          "position": {
            "end": {
              "column": 29,
              "line": 1,
            },
            "start": {
              "column": 21,
              "line": 1,
            },
          },
          "value": "callback",
        },
        "parameters": [
          {
            "kind": "FunctionParam",
            "name": {
              "position": {
                "end": {
                  "column": 32,
                  "line": 1,
                },
                "start": {
                  "column": 31,
                  "line": 1,
                },
              },
              "value": "x",
            },
            "type": {
              "isNominal": false,
              "kind": "PrimitiveType",
              "name": {
                "position": {
                  "end": {
                    "column": 40,
                    "line": 1,
                  },
                  "start": {
                    "column": 34,
                    "line": 1,
                  },
                },
                "value": "number",
              },
            },
          },
        ],
        "returnType": {
          "isNominal": false,
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 51,
                "line": 1,
              },
              "start": {
                "column": 45,
                "line": 1,
              },
            },
            "value": "number",
          },
        },
        "typeParameters": undefined,
      },
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Alias should parse alias for function signature with name and type parameters 1`] = `
{
  "body": [
    {
      "isNominal": false,
      "kind": "AliasDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 15,
                "line": 1,
              },
              "start": {
                "column": 7,
                "line": 1,
              },
            },
            "value": "Callback",
          },
        },
        "isNominal": false,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 15,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "value": "Callback",
        },
      },
      "type": {
        "body": undefined,
        "isNominal": false,
        "kind": "FunctionType",
        "name": {
          "position": {
            "end": {
              "column": 29,
              "line": 1,
            },
            "start": {
              "column": 21,
              "line": 1,
            },
          },
          "value": "callback",
        },
        "parameters": [
          {
            "kind": "FunctionParam",
            "name": {
              "position": {
                "end": {
                  "column": 38,
                  "line": 1,
                },
                "start": {
                  "column": 37,
                  "line": 1,
                },
              },
              "value": "x",
            },
            "type": {
              "actualType": {
                "kind": "PrimitiveType",
                "name": {
                  "position": {
                    "end": {
                      "column": 41,
                      "line": 1,
                    },
                    "start": {
                      "column": 40,
                      "line": 1,
                    },
                  },
                  "value": "T",
                },
              },
              "kind": "AliasType",
              "name": {
                "position": {
                  "end": {
                    "column": 41,
                    "line": 1,
                  },
                  "start": {
                    "column": 40,
                    "line": 1,
                  },
                },
                "value": "T",
              },
            },
          },
        ],
        "returnType": {
          "actualType": {
            "kind": "PrimitiveType",
            "name": {
              "position": {
                "end": {
                  "column": 47,
                  "line": 1,
                },
                "start": {
                  "column": 46,
                  "line": 1,
                },
              },
              "value": "U",
            },
          },
          "kind": "AliasType",
          "name": {
            "position": {
              "end": {
                "column": 47,
                "line": 1,
              },
              "start": {
                "column": 46,
                "line": 1,
              },
            },
            "value": "U",
          },
        },
        "typeParameters": [
          {
            "constraint": undefined,
            "kind": "TypeParameter",
            "name": {
              "position": {
                "end": {
                  "column": 31,
                  "line": 1,
                },
                "start": {
                  "column": 30,
                  "line": 1,
                },
              },
              "value": "T",
            },
          },
          {
            "constraint": undefined,
            "kind": "TypeParameter",
            "name": {
              "position": {
                "end": {
                  "column": 34,
                  "line": 1,
                },
                "start": {
                  "column": 33,
                  "line": 1,
                },
              },
              "value": "U",
            },
          },
        ],
      },
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Alias should parse alias for generic type 1`] = `
{
  "body": [
    {
      "isNominal": false,
      "kind": "AliasDeclaration",
      "name": {
        "isNominal": false,
        "kind": "GenericType",
        "name": {
          "position": {
            "end": {
              "column": 11,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "value": "User",
        },
        "parameters": [
          {
            "constraint": undefined,
            "kind": "TypeParameter",
            "name": {
              "position": {
                "end": {
                  "column": 13,
                  "line": 1,
                },
                "start": {
                  "column": 12,
                  "line": 1,
                },
              },
              "value": "T",
            },
          },
        ],
      },
      "type": {
        "isNominal": false,
        "kind": "GenericType",
        "name": {
          "position": {
            "end": {
              "column": 25,
              "line": 1,
            },
            "start": {
              "column": 17,
              "line": 1,
            },
          },
          "value": "Response",
        },
        "parameters": [
          {
            "constraint": undefined,
            "kind": "TypeParameter",
            "name": {
              "position": {
                "end": {
                  "column": 27,
                  "line": 1,
                },
                "start": {
                  "column": 26,
                  "line": 1,
                },
              },
              "value": "T",
            },
          },
        ],
      },
    },
  ],
  "kind": "Program",
}
`;

exports[`Parser - Alias should parse alias for getter 1`] = `
{
  "body": [
    {
      "isNominal": false,
      "kind": "AliasDeclaration",
      "name": {
        "actualType": {
          "kind": "PrimitiveType",
          "name": {
            "position": {
              "end": {
                "column": 14,
                "line": 1,
              },
              "start": {
                "column": 7,
                "line": 1,
              },
            },
            "value": "GetUser",
          },
        },
        "isNominal": false,
        "kind": "AliasType",
        "name": {
          "position": {
            "end": {
              "column": 14,
              "line": 1,
            },
            "start": {
              "column": 7,
              "line": 1,
            },
          },
          "value": "GetUser",
        },
      },
      "type": {
        "body": undefined,
        "isNominal": false,
        "kind": "GetterType",
        "name": {
          "position": {
            "end": {
              "column": 25,
              "line": 1,
            },
            "start": {
              "column": 21,
              "line": 1,
            },
          },
          "value": "user",
        },
        "parameters": undefined,
        "returnType": {
          "actualType": {
            "kind": "PrimitiveType",
            "name": {
              "position": {
                "end": {
                  "column": 33,
                  "line": 1,
                },
                "start": {
                  "column": 29,
                  "line": 1,
                },
              },
              "value": "User",
            },
          },
          "kind": "AliasType",
          "name": {
            "position": {
              "end": {
                "column": 33,
                "line": 1,
              },
              "start": {
                "column": 29,
                "line": 1,
              },
            },
            "value": "User",
          },
        },
      },
    },
  ],
  "kind": "Program",
}
`;
